--- a/web_app/package.json
+++ b/web_app/package.json
@@ -35,6 +35,7 @@
     "react-router-dom": "^6.12.1",
     "react-router-hash-link": "^2.4.3",
     "react-slick": "^0.29.0",
+    "react-toastify": "^10.0.5",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
